added swag docs to all auth controllers
