# docs/swagger.yaml
@@ -7,6 +7,21 @@ definitions:
       message:
         type: string
     type: object
+  passwordResetService.passReset1RespT:
+    properties:
+      msg:
+        type: string
+    type: object
+  passwordResetService.passReset2RespT:
+    properties:
+      msg:
+        type: string
+    type: object
+  passwordResetService.passReset3RespT:
+    properties:
+      msg:
+        type: string
+    type: object
   signinService.SigninRespT:
     properties:
       msg:
@@ -68,6 +83,40 @@ info:
   title: i9lyfe Backend API
   version: "1.0"
 paths:
+  /auth/forgot_password/request_password_reset:
+    post:
+      consumes:
+      - application/json
+      description: Submit your email to request a password reset
+      parameters:
+      - description: Provide your email address
+        in: body
+        name: email
+        required: true
+        schema:
+          type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Proceed to email confirmation
+          headers:
+            Set-Cookie:
+              description: Password Reset session response cookie
+              type: array
+          schema:
+            $ref: '#/definitions/passwordResetService.passReset1RespT'
+        "404":
+          description: No user with this email exists
+          schema:
+            $ref: '#/definitions/appErrors.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/appErrors.HTTPError'
+      summary: Password Reset - Step 1
+      tags:
+      - auth
   /auth/signin:
     post:
       consumes:
@@ -91,6 +140,10 @@ paths:
       responses:
         "200":
           description: Signin Success!
+          headers:
+            Set-Cookie:
+              description: User session response cookie containing auth JWT
+              type: array
           schema:
             $ref: '#/definitions/signinService.SigninRespT'
         "400":
@@ -106,6 +159,53 @@ paths:
           schema:
             $ref: '#/definitions/appErrors.HTTPError'
       summary: Signin user
+      tags:
+      - auth
+  /auth/signup/confirm_email:
+    post:
+      consumes:
+      - application/json
+      description: Provide the 6-digit token sent to email
+      parameters:
+      - description: 6-digit token
+        in: body
+        name: token
+        required: true
+        schema:
+          type: string
+      - description: Password Reset session request cookie
+        in: header
+        name: Cookie
+        required: true
+        type: array
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Email confirmed. You're about to reset your password
+          headers:
+            Set-Cookie:
+              description: Password Reset session request cookie
+              type: array
+          schema:
+            $ref: '#/definitions/passwordResetService.passReset2RespT'
+        "400":
+          description: Incorrect or expired confirmation token
+          headers:
+            Set-Cookie:
+              description: Password Reset session request cookie
+              type: array
+          schema:
+            $ref: '#/definitions/appErrors.HTTPError'
+        "500":
+          description: Internal Server Error
+          headers:
+            Set-Cookie:
+              description: Password Reset session request cookie
+              type: array
+          schema:
+            $ref: '#/definitions/appErrors.HTTPError'
+      summary: Password Reset - Step 2
       tags:
       - auth
   /auth/signup/register_user:
