# src/controllers/auth/passwordResetControllers/passwordResetControllers.go
@@ -10,6 +10,24 @@ import (
 	"github.com/gofiber/fiber/v2"
 )
 
+// Password Reset - Request Password Reset
+//
+//	@Summary		Password Reset - Step 1
+//	@Description	Submit your email to request a password reset
+//	@Tags			auth
+//	@Accept			json
+//	@Produce		json
+//
+//	@Param			email	body		string									true	"Provide your email address"
+//
+//	@Success		200		{object}	passwordResetService.passReset1RespT	"Proceed to email confirmation"
+//	@Header			200		{array}		Set-Cookie								"Password Reset session response cookie"
+//
+//	@Failure		404		{object}	appErrors.HTTPError						"No user with this email exists"
+//
+//	@Failure		500		{object}	appErrors.HTTPError
+//
+//	@Router			/auth/forgot_password/request_password_reset [post]
 func RequestPasswordReset(c *fiber.Ctx) error {
 	ctx, cancel := context.WithCancel(context.Background())
 	defer cancel()
@@ -41,6 +59,27 @@ func RequestPasswordReset(c *fiber.Ctx) error {
 	return c.JSON(respData)
 }
 
+// Fort password - Confirm Email
+//
+//	@Summary		Password Reset - Step 2
+//	@Description	Provide the 6-digit token sent to email
+//	@Tags			auth
+//	@Accept			json
+//	@Produce		json
+//
+//	@Param			token	body		string									true	"6-digit token"
+//	@Param			Cookie	header		array									true	"Password Reset session request cookie"
+//
+//	@Success		200		{object}	passwordResetService.passReset2RespT	"Email confirmed. You're about to reset your password"
+//	@Header			200		{array}		Set-Cookie								"Password Reset session request cookie"
+//
+//	@Failure		400		{object}	appErrors.HTTPError						"Incorrect or expired confirmation token"
+//	@Header			400		{array}		Set-Cookie								"Password Reset session request cookie"
+//
+//	@Failure		500		{object}	appErrors.HTTPError
+//	@Header			500		{array}		Set-Cookie	"Password Reset session request cookie"
+//
+//	@Router			/auth/signup/confirm_email [post]
 func ConfirmEmail(c *fiber.Ctx) error {
 	ctx, cancel := context.WithCancel(context.Background())
 	defer cancel()
@@ -74,6 +113,28 @@ func ConfirmEmail(c *fiber.Ctx) error {
 	return c.JSON(respData)
 }
 
+// Password Reset - Reset Password
+//
+//	@Summary		Password Reset user - Step 3
+//	@Description	Set new password
+//	@Tags			auth
+//	@Accept			json
+//	@Produce		json
+//
+//	@Param			newPassword			body		string									true	"Choose a new password"
+//	@Param			confirmNewPassword	body		string									true	"Conform new password"
+//
+//	@Param			Cookie				header		array									true	"Password Reset session request cookie"
+//
+//	@Success		200					{object}	passwordResetService.passReset3RespT	"Password changed successfully"
+//
+//	@Failure		400					{object}	appErrors.HTTPError						"Passwords mismatch."
+//	@Header			400					{array}		Set-Cookie								"Password Reset session response cookie"
+//
+//	@Failure		500					{object}	appErrors.HTTPError
+//	@Header			500					{array}		Set-Cookie	"Password Reset session response cookie"
+//
+//	@Router			/auth/signup/register_user [post]
 func ResetPassword(c *fiber.Ctx) error {
 	ctx, cancel := context.WithCancel(context.Background())
 	defer cancel()
